@@ -1,5 +1,5 @@
 /*
- *  Copyright 2006  Serge van den Boom <svdb@stack.nl>
+ *  Copyright 2012  Serge van den Boom <svdb@stack.nl>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -16,27 +16,13 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-#ifndef _CALLBACK_H
-#define _CALLBACK_H
+#ifndef _ASYNC_H
+#define _ASYNC_H
 
 #include "types.h"
 
-#ifdef CALLBACK_INTERNAL
-typedef CallbackLink *CallbackID;
-#else
-typedef void *CallbackID;
-		// Uniquely identifies a queued callback.
-#endif
-#define CallbackID_invalid ((CallbackID ) NULL)
+void Async_process(void);
+uint32 Async_timeBeforeNextMs(void);
 
-typedef void *CallbackArg;
-typedef void (*CallbackFunction)(CallbackArg arg);
-
-void Callback_init(void);
-CallbackID Callback_add(CallbackFunction callback, CallbackArg arg);
-bool Callback_remove(CallbackID id);
-void Callback_process(void);
-bool Callback_haveMore(void);
-
-#endif  /* _CALLBACK_H */
+#endif  /* _ASYNC_H */
 
